cmake_minimum_required(VERSION 3.10)
project(rb_tree CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

add_executable(rb_tree main.cpp)
target_compile_options(rb_tree PRIVATE -Wall -Wextra -Wpedantic)
