cmake_minimum_required(VERSION 3.10)
project(txmgr CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

find_package(Threads REQUIRED)
add_executable(txmgr main.cpp)
target_link_libraries(txmgr PRIVATE Threads::Threads)
target_compile_options(txmgr PRIVATE -Wall -Wextra -Wpedantic)
